--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOXUEL GAMNING</title>
+    <title>toetuffgng</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -18,8 +18,8 @@
         <header class="header">
             <div class="logo">
                 <!-- Clean futuristic neon logo -->
-                <img src="https://png.pngtree.com/thumb_back/fh260/background/20240521/pngtree-futuristic-border-blue-neon-image_15804970.jpg" alt="BOXUEL GAMNING Logo">
-                <h1>BOXUEL GAMNING</h1>
+                <img src="https://png.pngtree.com/thumb_back/fh260/background/20240521/pngtree-futuristic-border-blue-neon-image_15804970.jpg" alt="toetuffgng Logo">
+                <h1>toetuffgng</h1>
             </div>
             <div class="search-bar">
                 <input type="text" id="searchInput" placeholder="Search games...">
