--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <div class="page-container">
         <!-- Header Logo + Search -->
         <header class="header">
+            <link rel="icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+
             <div class="logo">
                 <!-- Clean futuristic neon logo -->
                 <img src="https://png.pngtree.com/thumb_back/fh260/background/20240521/pngtree-futuristic-border-blue-neon-image_15804970.jpg" alt="toetuffgng Logo">
