--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
         <!-- Header Logo + Search -->
         <header class="header">
             <link rel="icon" href="favicon.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
 
             <div class="logo">
                 <!-- Clean futuristic neon logo -->
