--- a/index.html
+++ b/index.html
@@ -34,13 +34,42 @@
 
         <!-- Featured Banner -->
         <section class="featured">
-            <img src="https://4kwallpapers.com/images/wallpapers/neon-city-futuristic-city-cyber-city-cyberpunk-cityscape-5k-3840x2160-8801.jpg" alt="Featured">
+    <div class="featured-slider" id="featuredSlider">
+
+        <div class="featured-slide active">
+            <img src="https://4kwallpapers.com/images/wallpapers/neon-city-futuristic-city-cyber-city-cyberpunk-cityscape-5k-3840x2160-8801.jpg">
             <div class="banner-overlay">
                 <h2>Racer Master Legacy</h2>
                 <p>High-speed racing in a neon cyber world</p>
                 <button class="play-btn" onclick="window.location.href='game.html?id=racer'">Play Now</button>
             </div>
-        </section>
+        </div>
+
+        <div class="featured-slide">
+            <img src="https://images.pexels.com/photos/3165335/pexels-photo-3165335.jpeg">
+            <div class="banner-overlay">
+                <h2>Neon Racer</h2>
+                <p>Drift through cyber streets at light speed</p>
+                <button class="play-btn">Play Now</button>
+            </div>
+        </div>
+
+        <div class="featured-slide">
+            <img src="https://images.pexels.com/photos/3165330/pexels-photo-3165330.jpeg">
+            <div class="banner-overlay">
+                <h2>Quantum Puzzle</h2>
+                <p>Hack the grid with logic & timing</p>
+                <button class="play-btn">Play Now</button>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Controls -->
+    <button class="slide-btn prev" onclick="prevSlide()">❮</button>
+    <button class="slide-btn next" onclick="nextSlide()">❯</button>
+</section>
+
 
         <!-- Category Buttons -->
         <div class="category-filters">
