--- a/index.html
+++ b/index.html
@@ -33,33 +33,14 @@
         </header>
 
         <!-- Featured Banner -->
-        <section class="featured" id="featured">
-    <div class="featured-slide active" style="background-image:url('https://4kwallpapers.com/images/wallpapers/neon-city-futuristic-city-cyber-city-cyberpunk-cityscape-5k-3840x2160-8801.jpg')">
-        <div class="banner-overlay">
-            <h2>Racer Master Legacy</h2>
-            <p>High-speed racing in a neon cyber world</p>
-            <button class="play-btn">Play Now</button>
-        </div>
-    </div>
-
-    <div class="featured-slide" style="background-image:url('https://images.pexels.com/photos/3165335/pexels-photo-3165335.jpeg')">
-        <div class="banner-overlay">
-            <h2>Neon Racer</h2>
-            <p>Drift through cyber streets at light speed</p>
-            <button class="play-btn">Play Now</button>
-        </div>
-    </div>
-
-    <div class="featured-slide" style="background-image:url('https://images.pexels.com/photos/3165330/pexels-photo-3165330.jpeg')">
-        <div class="banner-overlay">
-            <h2>Quantum Puzzle</h2>
-            <p>Hack the grid with logic & timing</p>
-            <button class="play-btn">Play Now</button>
-        </div>
-    </div>
-</section>
-
-
+        <section class="featured">
+            <img src="https://4kwallpapers.com/images/wallpapers/neon-city-futuristic-city-cyber-city-cyberpunk-cityscape-5k-3840x2160-8801.jpg" alt="Featured">
+            <div class="banner-overlay">
+                <h2>Racer Master Legacy</h2>
+                <p>High-speed racing in a neon cyber world</p>
+                <button class="play-btn" onclick="window.location.href='game.html?id=racer'">Play Now</button>
+            </div>
+        </section>
 
         <!-- Category Buttons -->
         <div class="category-filters">
