--- a/index.html
+++ b/index.html
@@ -30,13 +30,34 @@
 
         <!-- Featured Banner -->
         <section class="featured">
-            <img src="https://4kwallpapers.com/images/wallpapers/neon-city-futuristic-city-cyber-city-cyberpunk-cityscape-5k-3840x2160-8801.jpg" alt="Featured">
-            <div class="banner-overlay">
-                <h2>Racer Master Legacy</h2>
-                <p>High-speed racing in a neon cyber world</p>
-                <button class="play-btn" onclick="window.location.href='game.html?id=racer'">Play Now</button>
-            </div>
-        </section>
+  <div class="featured-item active">
+    <img src="images/featured/racer.jpg">
+    <div class="banner-overlay">
+      <h2>Racer Master Legacy</h2>
+      <p>High-speed racing in a neon cyber world</p>
+      <button class="play-btn">Play Now</button>
+    </div>
+  </div>
+
+  <div class="featured-item">
+    <img src="images/featured/hextris.jpg">
+    <div class="banner-overlay">
+      <h2>Hextris</h2>
+      <p>Fast-paced geometric puzzle challenge</p>
+      <button class="play-btn">Play Now</button>
+    </div>
+  </div>
+
+  <div class="featured-item">
+    <img src="images/featured/clumsy.jpg">
+    <div class="banner-overlay">
+      <h2>Clumsy Bird</h2>
+      <p>Dodge, flap, survive</p>
+      <button class="play-btn">Play Now</button>
+    </div>
+  </div>
+</section>
+
 
         <!-- Category Buttons -->
         <div class="category-filters">
