--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </header>
 
         <!-- Featured Banner -->
-        <section class="featured">
+<section class="featured">
   <div class="featured-item active">
-    <img src="images/featured/racer.jpg">
+    <img src="https://images.wallpapersden.com/image/download/cyberpunk-city-neon-digital-art_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg">
     <div class="banner-overlay">
       <h2>Racer Master Legacy</h2>
       <p>High-speed racing in a neon cyber world</p>
@@ -40,7 +40,7 @@
   </div>
 
   <div class="featured-item">
-    <img src="images/featured/hextris.jpg">
+    <img src="https://images.wallpapersden.com/image/download/abstract-hexagon-neon-digital-art_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg">
     <div class="banner-overlay">
       <h2>Hextris</h2>
       <p>Fast-paced geometric puzzle challenge</p>
@@ -49,7 +49,7 @@
   </div>
 
   <div class="featured-item">
-    <img src="images/featured/clumsy.jpg">
+    <img src="https://images.wallpapersden.com/image/download/cyberpunk-neon-character-city_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg">
     <div class="banner-overlay">
       <h2>Clumsy Bird</h2>
       <p>Dodge, flap, survive</p>
@@ -57,6 +57,7 @@
     </div>
   </div>
 </section>
+
 
 
         <!-- Category Buttons -->
@@ -71,23 +72,31 @@
         <section class="games-section">
             <h2 id="sectionTitle">All Games</h2>
             <div class="games-grid" id="gamesGrid">
-                <!-- Example static cards (you can replace with JS later) -->
-                <div class="game-card">
-                    <img src="https://images.pexels.com/photos/3165335/pexels-photo-3165335.jpeg" alt="Neon Racer">
-                    <h3>Neon Racer</h3>
-                    <p>Drift through cyber streets at light speed.</p>
-                </div>
-                <div class="game-card">
-                    <img src="https://images.pexels.com/photos/3165330/pexels-photo-3165330.jpeg" alt="Quantum Puzzle">
-                    <h3>Quantum Puzzle</h3>
-                    <p>Hack the grid with your logic and timing.</p>
-                </div>
-                <div class="game-card">
-                    <img src="https://images.pexels.com/photos/907173/pexels-photo-907173.jpeg" alt="Arcade Bots">
-                    <h3>Arcade Bots</h3>
-                    <p>Fight waves of rogue mechs in neon arenas.</p>
-                </div>
-            </div>
+    <div class="game-card">
+        <img src="https://images.wallpapersden.com/image/download/neon-supercar-cyberpunk_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg" alt="Racer Master">
+        <h3>Racer Master</h3>
+        <p>Drift through cyber streets at light speed.</p>
+    </div>
+
+    <div class="game-card">
+        <img src="https://images.wallpapersden.com/image/download/abstract-hexagon-3d-art_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg" alt="Hextris">
+        <h3>Hextris</h3>
+        <p>Hack the grid with your logic and timing.</p>
+    </div>
+
+    <div class="game-card">
+        <img src="https://images.wallpapersden.com/image/download/cyberpunk-character-neon-city_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg" alt="Clumsy Bird">
+        <h3>Clumsy Bird</h3>
+        <p>Dodge, flap, survive the chaos.</p>
+    </div>
+
+    <div class="game-card">
+        <img src="https://images.wallpapersden.com/image/download/neon-matrix-digital-art_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg" alt="2048">
+        <h3>2048</h3>
+        <p>Classic puzzle with a neon twist.</p>
+    </div>
+</div>
+
         </section>
     </div>
 
