--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Featured Banner -->
 <section class="featured">
   <div class="featured-item active">
-    <img src="https://images.unsplash.com/photo-1503736334956-4c8f8e92946d?auto=format&fit=crop&w=1600&q=80">
+    <img src="https://images.wallpapersden.com/image/download/cyberpunk-car-neon-city_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg">
     <div class="banner-overlay">
       <h2>Racer Master Legacy</h2>
       <p>High-speed racing in a neon cyber world</p>
@@ -40,7 +40,7 @@
   </div>
 
   <div class="featured-item">
-    <img src="https://images.unsplash.com/photo-1545239351-1141bd82e8a6?auto=format&fit=crop&w=1600&q=80">
+    <img src="https://images.wallpapersden.com/image/download/neon-hexagon-abstract-digital-art_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg">
     <div class="banner-overlay">
       <h2>Hextris</h2>
       <p>Fast-paced geometric puzzle challenge</p>
@@ -49,7 +49,7 @@
   </div>
 
   <div class="featured-item">
-    <img src="https://images.unsplash.com/photo-1520975916090-3105956dac38?auto=format&fit=crop&w=1600&q=80">
+    <img src="https://images.wallpapersden.com/image/download/synthwave-neon-city-digital-art_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg">
     <div class="banner-overlay">
       <h2>Clumsy Bird</h2>
       <p>Dodge, flap, survive</p>
@@ -57,6 +57,7 @@
     </div>
   </div>
 </section>
+
 
 
         <!-- Category Buttons -->
@@ -69,34 +70,37 @@
 
         <!-- Games Section -->
         <section class="games-section">
-            <h2 id="sectionTitle">All Games</h2>
-            <div class="games-grid" id="gamesGrid">
+  <h2 id="sectionTitle">All Games</h2>
+
+  <div class="games-grid" id="gamesGrid">
+
     <div class="game-card">
-        <img src="https://images.unsplash.com/photo-1511910849309-0dffb8785146?auto=format&fit=crop&w=900&q=80" alt="Racer Master">
-        <h3>Racer Master</h3>
-        <p>Drift through cyber streets at light speed.</p>
+      <img src="https://images.wallpapersden.com/image/download/neon-supercar-cyberpunk_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg" alt="Racer Master">
+      <h3>Racer Master</h3>
+      <p>Drift through cyber streets at light speed.</p>
     </div>
 
     <div class="game-card">
-        <img src="https://images.unsplash.com/photo-1557683316-973673baf926?auto=format&fit=crop&w=900&q=80" alt="Hextris">
-        <h3>Hextris</h3>
-        <p>Hack the grid with your logic and timing.</p>
+      <img src="https://images.wallpapersden.com/image/download/futuristic-hexagon-technology_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg" alt="Hextris">
+      <h3>Hextris</h3>
+      <p>Hack the grid with your logic and timing.</p>
     </div>
 
     <div class="game-card">
-        <img src="https://images.unsplash.com/photo-1507149833265-60c372daea22?auto=format&fit=crop&w=900&q=80" alt="Clumsy Bird">
-        <h3>Clumsy Bird</h3>
-        <p>Dodge, flap, survive the chaos.</p>
+      <img src="https://images.wallpapersden.com/image/download/neon-arcade-retro-futuristic_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg" alt="Clumsy Bird">
+      <h3>Clumsy Bird</h3>
+      <p>Dodge, flap, survive the chaos.</p>
     </div>
 
     <div class="game-card">
-        <img src="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?auto=format&fit=crop&w=900&q=80" alt="2048">
-        <h3>2048</h3>
-        <p>Classic puzzle with a neon twist.</p>
+      <img src="https://images.wallpapersden.com/image/download/neon-digital-matrix-codes_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg" alt="2048">
+      <h3>2048</h3>
+      <p>Classic puzzle with a neon twist.</p>
     </div>
-</div>
 
-        </section>
+  </div>
+</section>
+
     </div>
 
     <!-- Your main game JS if needed -->
