--- a/index.html
+++ b/index.html
@@ -28,78 +28,86 @@
             </div>
         </header>
 
-        <!-- Featured Banner -->
-<section class="featured">
-  <div class="featured-item active">
-    <img src="https://images.wallpapersden.com/image/download/cyberpunk-car-neon-city_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg">
-    <div class="banner-overlay">
-      <h2>Racer Master Legacy</h2>
-      <p>High-speed racing in a neon cyber world</p>
-      <button class="play-btn">Play Now</button>
-    </div>
-  </div>
+    <!-- FEATURED BANNER -->
+    <section class="featured">
 
-  <div class="featured-item">
-    <img src="https://images.wallpapersden.com/image/download/neon-hexagon-abstract-digital-art_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg">
-    <div class="banner-overlay">
-      <h2>Hextris</h2>
-      <p>Fast-paced geometric puzzle challenge</p>
-      <button class="play-btn">Play Now</button>
-    </div>
-  </div>
-
-  <div class="featured-item">
-    <img src="https://images.wallpapersden.com/image/download/synthwave-neon-city-digital-art_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg">
-    <div class="banner-overlay">
-      <h2>Clumsy Bird</h2>
-      <p>Dodge, flap, survive</p>
-      <button class="play-btn">Play Now</button>
-    </div>
-  </div>
-</section>
-
-
-
-        <!-- Category Buttons -->
-        <div class="category-filters">
-            <button class="cat-btn active" data-cat="all">All</button>
-            <button class="cat-btn" data-cat="racing">Racing</button>
-            <button class="cat-btn" data-cat="puzzle">Puzzle</button>
-            <button class="cat-btn" data-cat="arcade">Arcade</button>
+        <!-- Racer Master Legacy -->
+        <div class="featured-item active">
+            <img src="https://images.unsplash.com/photo-1549921296-3cce0d7f7f2b?auto=format&fit=crop&w=1600&q=80">
+            <div class="banner-overlay">
+                <h2>Racer Master Legacy</h2>
+                <p>High-speed racing in a neon cyber world</p>
+                <button class="play-btn">Play Now</button>
+            </div>
         </div>
 
-        <!-- Games Section -->
-        <section class="games-section">
-  <h2 id="sectionTitle">All Games</h2>
+        <!-- Hextris -->
+        <div class="featured-item">
+            <img src="https://images.unsplash.com/photo-1557683316-973673baf926?auto=format&fit=crop&w=1600&q=80">
+            <div class="banner-overlay">
+                <h2>Hextris</h2>
+                <p>Fast-paced geometric puzzle challenge</p>
+                <button class="play-btn">Play Now</button>
+            </div>
+        </div>
 
-  <div class="games-grid" id="gamesGrid">
+        <!-- Clumsy Bird -->
+        <div class="featured-item">
+            <img src="https://images.unsplash.com/photo-1518544887878-6d1c4e5edc31?auto=format&fit=crop&w=1600&q=80">
+            <div class="banner-overlay">
+                <h2>Clumsy Bird</h2>
+                <p>Dodge, flap, survive</p>
+                <button class="play-btn">Play Now</button>
+            </div>
+        </div>
 
-    <div class="game-card">
-      <img src="https://images.wallpapersden.com/image/download/neon-supercar-cyberpunk_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg" alt="Racer Master">
-      <h3>Racer Master</h3>
-      <p>Drift through cyber streets at light speed.</p>
+    </section>
+
+    <!-- Category Buttons -->
+    <div class="category-filters">
+        <button class="cat-btn active" data-cat="all">All</button>
+        <button class="cat-btn" data-cat="racing">Racing</button>
+        <button class="cat-btn" data-cat="puzzle">Puzzle</button>
+        <button class="cat-btn" data-cat="arcade">Arcade</button>
     </div>
 
-    <div class="game-card">
-      <img src="https://images.wallpapersden.com/image/download/futuristic-hexagon-technology_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg" alt="Hextris">
-      <h3>Hextris</h3>
-      <p>Hack the grid with your logic and timing.</p>
-    </div>
+    <!-- GAMES GRID -->
+    <section class="games-section">
+        <h2 id="sectionTitle">All Games</h2>
 
-    <div class="game-card">
-      <img src="https://images.wallpapersden.com/image/download/neon-arcade-retro-futuristic_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg" alt="Clumsy Bird">
-      <h3>Clumsy Bird</h3>
-      <p>Dodge, flap, survive the chaos.</p>
-    </div>
+        <div class="games-grid" id="gamesGrid">
 
-    <div class="game-card">
-      <img src="https://images.wallpapersden.com/image/download/neon-digital-matrix-codes_bmdla26UmZqaraWkpJRmbmdlrWZlbWU.jpg" alt="2048">
-      <h3>2048</h3>
-      <p>Classic puzzle with a neon twist.</p>
-    </div>
+            <!-- Racer Master -->
+            <div class="game-card">
+                <img src="https://images.unsplash.com/photo-1502877338535-766e1452684a?auto=format&fit=crop&w=900&q=80">
+                <h3>Racer Master</h3>
+                <p>Drift through cyber streets at light speed.</p>
+            </div>
 
-  </div>
-</section>
+            <!-- Hextris -->
+            <div class="game-card">
+                <img src="https://images.unsplash.com/photo-1581091870627-3c1b4e3e6c24?auto=format&fit=crop&w=900&q=80">
+                <h3>Hextris</h3>
+                <p>Hack the grid with your logic and timing.</p>
+            </div>
+
+            <!-- Clumsy Bird -->
+            <div class="game-card">
+                <img src="https://images.unsplash.com/photo-1614728263952-84ea256f9679?auto=format&fit=crop&w=900&q=80">
+                <h3>Clumsy Bird</h3>
+                <p>Dodge, flap, survive the chaos.</p>
+            </div>
+
+            <!-- 2048 -->
+            <div class="game-card">
+                <img src="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?auto=format&fit=crop&w=900&q=80">
+                <h3>2048</h3>
+                <p>Classic puzzle with a neon twist.</p>
+            </div>
+
+        </div>
+    </section>
+
 
     </div>
 
