--- a/index.html
+++ b/index.html
@@ -31,38 +31,34 @@
     <!-- FEATURED BANNER -->
     <section class="featured">
 
-        <!-- Racer Master Legacy -->
-        <div class="featured-item active">
-            <img src="https://images.unsplash.com/photo-1549921296-3cce0d7f7f2b?auto=format&fit=crop&w=1600&q=80">
-            <div class="banner-overlay">
-                <h2>Racer Master Legacy</h2>
-                <p>High-speed racing in a neon cyber world</p>
-                <button class="play-btn">Play Now</button>
-            </div>
-        </div>
+                <div class="featured-item active">
+            <img src="https://i.ibb.co/688h2gL/racer-master-legacy.png">
+            <div class="banner-overlay">
+                <h2>Racer Master Legacy</h2>
+                <p>High-speed racing in a neon cyber world</p>
+                <button class="play-btn">Play Now</button>
+            </div>
+        </div>
 
-        <!-- Hextris -->
-        <div class="featured-item">
-            <img src="https://images.unsplash.com/photo-1557683316-973673baf926?auto=format&fit=crop&w=1600&q=80">
-            <div class="banner-overlay">
-                <h2>Hextris</h2>
-                <p>Fast-paced geometric puzzle challenge</p>
-                <button class="play-btn">Play Now</button>
-            </div>
-        </div>
+                <div class="featured-item">
+            <img src="https://i.ibb.co/0VpL0Xh/hextris.png">
+            <div class="banner-overlay">
+                <h2>Hextris</h2>
+                <p>Fast-paced geometric puzzle challenge</p>
+                <button class="play-btn">Play Now</button>
+            </div>
+        </div>
 
-        <!-- Clumsy Bird -->
-        <div class="featured-item">
-            <img src="https://images.unsplash.com/photo-1518544887878-6d1c4e5edc31?auto=format&fit=crop&w=1600&q=80">
-            <div class="banner-overlay">
-                <h2>Clumsy Bird</h2>
-                <p>Dodge, flap, survive</p>
-                <button class="play-btn">Play Now</button>
-            </div>
-        </div>
+                <div class="featured-item">
+            <img src="https://i.ibb.co/c869p4X/clumsy-bird.png">
+            <div class="banner-overlay">
+                <h2>Clumsy Bird</h2>
+                <p>Dodge, flap, survive</p>
+                <button class="play-btn">Play Now</button>
+            </div>
+        </div>
 
-    </section>
-
+    </section>
     <!-- Category Buttons -->
     <div class="category-filters">
         <button class="cat-btn active" data-cat="all">All</button>
@@ -79,21 +75,18 @@
 
             <!-- Racer Master -->
             <div class="game-card">
-                <img src="https://images.unsplash.com/photo-1502877338535-766e1452684a?auto=format&fit=crop&w=900&q=80">
                 <h3>Racer Master</h3>
                 <p>Drift through cyber streets at light speed.</p>
             </div>
 
             <!-- Hextris -->
             <div class="game-card">
-                <img src="https://images.unsplash.com/photo-1581091870627-3c1b4e3e6c24?auto=format&fit=crop&w=900&q=80">
                 <h3>Hextris</h3>
                 <p>Hack the grid with your logic and timing.</p>
             </div>
 
             <!-- Clumsy Bird -->
             <div class="game-card">
-                <img src="https://images.unsplash.com/photo-1614728263952-84ea256f9679?auto=format&fit=crop&w=900&q=80">
                 <h3>Clumsy Bird</h3>
                 <p>Dodge, flap, survive the chaos.</p>
             </div>
