--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </header>
 
     <!-- FEATURED BANNER -->
-    <section class="featured">
+<section class="featured">
 
                 <div class="featured-item active">
-            <img src="https://i.ibb.co/688h2gL/racer-master-legacy.png">
+            <img src="https://images.unsplash.com/photo-1627993026362-799d6302c019?q=80&w=1600&auto=format&fit=crop">
             <div class="banner-overlay">
                 <h2>Racer Master Legacy</h2>
                 <p>High-speed racing in a neon cyber world</p>
@@ -41,7 +41,7 @@
         </div>
 
                 <div class="featured-item">
-            <img src="https://i.ibb.co/0VpL0Xh/hextris.png">
+            <img src="https://images.unsplash.com/photo-1543285198-15494191d4e7?q=80&w=1600&auto=format&fit=crop">
             <div class="banner-overlay">
                 <h2>Hextris</h2>
                 <p>Fast-paced geometric puzzle challenge</p>
@@ -50,7 +50,7 @@
         </div>
 
                 <div class="featured-item">
-            <img src="https://i.ibb.co/c869p4X/clumsy-bird.png">
+            <img src="https://images.unsplash.com/photo-1594950664871-332e92c57576?q=80&w=1600&auto=format&fit=crop">
             <div class="banner-overlay">
                 <h2>Clumsy Bird</h2>
                 <p>Dodge, flap, survive</p>
