--- a/index.html
+++ b/index.html
@@ -29,36 +29,35 @@
         </header>
 
     <!-- FEATURED BANNER -->
-<section class="featured">
+     <section class="featured">
+    <div class="featured-item active">
+        <img src="https://thumbs.dreamstime.com/z/futuristic-neon-sports-car-cyberpunk-cityscape-experience-thrill-high-speed-ride-lit-city-image-showcases-397668554.jpg" alt="Racer Master Legacy banner">
+        <div class="banner-overlay">
+            <h2>Racer Master Legacy</h2>
+            <p>High-speed racing in a neon cyber world</p>
+            <button class="play-btn">Play Now</button>
+        </div>
+    </div>
+    
+    <div class="featured-item">
+        <img src="https://assets.content.technologyadvice.com/635276395662245314_0dbbbd224e.webp" alt="Hextris banner">
+        <div class="banner-overlay">
+            <h2>Hextris</h2>
+            <p>Fast-paced geometric puzzle challenge</p>
+            <button class="play-btn">Play Now</button>
+        </div>
+    </div>
+    
+    <div class="featured-item">
+        <img src="https://assets.content.technologyadvice.com/635276395662245314_0dbbbd224e.webp" alt="Clumsy Bird banner">
+        <div class="banner-overlay">
+            <h2>Clumsy Bird</h2>
+            <p>Dodge, flap, survive</p>
+            <button class="play-btn">Play Now</button>
+        </div>
+    </div>
+</section>
 
-                <div class="featured-item active">
-            <img src="https://images.unsplash.com/photo-1627993026362-799d6302c019?q=80&w=1600&auto=format&fit=crop">
-            <div class="banner-overlay">
-                <h2>Racer Master Legacy</h2>
-                <p>High-speed racing in a neon cyber world</p>
-                <button class="play-btn">Play Now</button>
-            </div>
-        </div>
-
-                <div class="featured-item">
-            <img src="https://images.unsplash.com/photo-1543285198-15494191d4e7?q=80&w=1600&auto=format&fit=crop">
-            <div class="banner-overlay">
-                <h2>Hextris</h2>
-                <p>Fast-paced geometric puzzle challenge</p>
-                <button class="play-btn">Play Now</button>
-            </div>
-        </div>
-
-                <div class="featured-item">
-            <img src="https://images.unsplash.com/photo-1594950664871-332e92c57576?q=80&w=1600&auto=format&fit=crop">
-            <div class="banner-overlay">
-                <h2>Clumsy Bird</h2>
-                <p>Dodge, flap, survive</p>
-                <button class="play-btn">Play Now</button>
-            </div>
-        </div>
-
-    </section>
     <!-- Category Buttons -->
     <div class="category-filters">
         <button class="cat-btn active" data-cat="all">All</button>
