--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- FEATURED BANNER -->
      <section class="featured">
     <div class="featured-item active">
-        <img src="https://thumbs.dreamstime.com/z/futuristic-neon-sports-car-cyberpunk-cityscape-experience-thrill-high-speed-ride-lit-city-image-showcases-397668554.jpg" alt="Racer Master Legacy banner">
+        <img src="https://png.pngtree.com/background/20231018/original/pngtree-3d-rendered-neon-city-drive-in-a-futuristic-car-picture-image_5596248.jpg" alt="Racer Master Legacy - Futuristic neon high-speed drive">
         <div class="banner-overlay">
             <h2>Racer Master Legacy</h2>
             <p>High-speed racing in a neon cyber world</p>
@@ -40,7 +40,7 @@
     </div>
     
     <div class="featured-item">
-        <img src="https://assets.content.technologyadvice.com/635276395662245314_0dbbbd224e.webp" alt="Hextris banner">
+        <img src="https://thumbs.dreamstime.com/b/d-rendering-colorful-hexagonal-pattern-image-presents-captivating-scene-overlapping-hexagons-vibrant-spectrum-colors-392610859.jpg" alt="Hextris - Vibrant overlapping hexagons puzzle abstract">
         <div class="banner-overlay">
             <h2>Hextris</h2>
             <p>Fast-paced geometric puzzle challenge</p>
@@ -49,7 +49,7 @@
     </div>
     
     <div class="featured-item">
-        <img src="https://assets.content.technologyadvice.com/635276395662245314_0dbbbd224e.webp" alt="Clumsy Bird banner">
+        <img src="https://wallpapers.com/images/hd/flappy-bird-background-ecbnameh4r7cchev.jpg" alt="Clumsy Bird - Classic endless flying through pipes">
         <div class="banner-overlay">
             <h2>Clumsy Bird</h2>
             <p>Dodge, flap, survive</p>
@@ -57,7 +57,6 @@
         </div>
     </div>
 </section>
-
     <!-- Category Buttons -->
     <div class="category-filters">
         <button class="cat-btn active" data-cat="all">All</button>
