--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- FEATURED BANNER -->
      <section class="featured">
     <div class="featured-item active">
-        <img src="https://png.pngtree.com/background/20231018/original/pngtree-3d-rendered-neon-city-drive-in-a-futuristic-car-picture-image_5596248.jpg" alt="Racer Master Legacy - Futuristic neon high-speed drive">
+        <img src="https://lookaside.fbsbx.com/lookaside/crawler/media/?media_id=1047860100673589" alt="Racer Master Legacy - Cyberpunk robot in neon fashion scene">
         <div class="banner-overlay">
             <h2>Racer Master Legacy</h2>
             <p>High-speed racing in a neon cyber world</p>
@@ -40,7 +40,7 @@
     </div>
     
     <div class="featured-item">
-        <img src="https://thumbs.dreamstime.com/b/d-rendering-colorful-hexagonal-pattern-image-presents-captivating-scene-overlapping-hexagons-vibrant-spectrum-colors-392610859.jpg" alt="Hextris - Vibrant overlapping hexagons puzzle abstract">
+        <img src="https://lookaside.fbsbx.com/lookaside/crawler/media/?media_id=1047860244006908" alt="Hextris - Futuristic robotic cyberpunk neon abstract">
         <div class="banner-overlay">
             <h2>Hextris</h2>
             <p>Fast-paced geometric puzzle challenge</p>
@@ -49,7 +49,7 @@
     </div>
     
     <div class="featured-item">
-        <img src="https://wallpapers.com/images/hd/flappy-bird-background-ecbnameh4r7cchev.jpg" alt="Clumsy Bird - Classic endless flying through pipes">
+        <img src="https://thumbs.dreamstime.com/b/futuristic-cityscape-sunset-neon-lit-skyscrapers-flying-vehicles-emit-light-trails-sky-people-holding-transparent-422221998.jpg" alt="Clumsy Bird - Neon cyberpunk city with flying robotic elements">
         <div class="banner-overlay">
             <h2>Clumsy Bird</h2>
             <p>Dodge, flap, survive</p>
