--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- FEATURED BANNER -->
      <section class="featured">
     <div class="featured-item active">
-        <img src="https://lookaside.fbsbx.com/lookaside/crawler/media/?media_id=1047860100673589" alt="Racer Master Legacy - Cyberpunk robot in neon fashion scene">
+        <img src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?auto=format&fit=crop&w=1600&q=80" alt="Racer Master Legacy - Neon cyberpunk racing streets">
         <div class="banner-overlay">
             <h2>Racer Master Legacy</h2>
             <p>High-speed racing in a neon cyber world</p>
@@ -40,7 +40,7 @@
     </div>
     
     <div class="featured-item">
-        <img src="https://lookaside.fbsbx.com/lookaside/crawler/media/?media_id=1047860244006908" alt="Hextris - Futuristic robotic cyberpunk neon abstract">
+        <img src="https://images.unsplash.com/photo-1553356084-58ef4a67b2a7?auto=format&fit=crop&w=1600&q=80" alt="Hextris - Futuristic neon hexagon grid cyber">
         <div class="banner-overlay">
             <h2>Hextris</h2>
             <p>Fast-paced geometric puzzle challenge</p>
@@ -49,7 +49,7 @@
     </div>
     
     <div class="featured-item">
-        <img src="https://thumbs.dreamstime.com/b/futuristic-cityscape-sunset-neon-lit-skyscrapers-flying-vehicles-emit-light-trails-sky-people-holding-transparent-422221998.jpg" alt="Clumsy Bird - Neon cyberpunk city with flying robotic elements">
+        <img src="https://images.unsplash.com/photo-1551028719-00167b16eac5?auto=format&fit=crop&w=1600&q=80" alt="Clumsy Bird - Cyberpunk flying drone in neon city">
         <div class="banner-overlay">
             <h2>Clumsy Bird</h2>
             <p>Dodge, flap, survive</p>
