--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- FEATURED BANNER -->
      <section class="featured">
     <div class="featured-item active">
-        <img src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?auto=format&fit=crop&w=1600&q=80" alt="Racer Master Legacy - Neon cyberpunk racing streets">
+        <img src="https://images.unsplash.com/photo-1573496358961-3c59e9789a1f?auto=format&fit=crop&w=1600&q=80" alt="Racer Master Legacy - Futuristic robotic neon speed">
         <div class="banner-overlay">
             <h2>Racer Master Legacy</h2>
             <p>High-speed racing in a neon cyber world</p>
@@ -40,7 +40,7 @@
     </div>
     
     <div class="featured-item">
-        <img src="https://images.unsplash.com/photo-1553356084-58ef4a67b2a7?auto=format&fit=crop&w=1600&q=80" alt="Hextris - Futuristic neon hexagon grid cyber">
+        <img src="https://images.unsplash.com/photo-1625314886332-fba38d2d2c15?auto=format&fit=crop&w=1600&q=80" alt="Hextris - Robotic neon geometric puzzle">
         <div class="banner-overlay">
             <h2>Hextris</h2>
             <p>Fast-paced geometric puzzle challenge</p>
@@ -49,7 +49,7 @@
     </div>
     
     <div class="featured-item">
-        <img src="https://images.unsplash.com/photo-1551028719-00167b16eac5?auto=format&fit=crop&w=1600&q=80" alt="Clumsy Bird - Cyberpunk flying drone in neon city">
+        <img src="https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="Clumsy Bird - Futuristic neon robotic flight">
         <div class="banner-overlay">
             <h2>Clumsy Bird</h2>
             <p>Dodge, flap, survive</p>
