--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>ToeTuff GNG – Online Games</title>
+
+    <meta name="description" content="ToeTuff GNG is an online gaming platform with fun browser games." />
+
+    <meta name="robots" content="index, follow" />
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>toetuffgng</title>
