--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="ToeTuff GNG is an online gaming platform with fun browser games." />
 
     <meta name="robots" content="index, follow" />
-
+    <meta name="google-site-verification" content="N7TUZwivBtIclU_IrhALGnub9L2trj7CkBNorN0nCCw" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>toetuffgng</title>
