--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>ToeTuff GNG – Online Games</title>
+    <title>ToeTuff Gang (GNG) – Free Online Browser Games</title>
 
-    <meta name="description" content="ToeTuff GNG is an online gaming platform with fun browser games." />
+<meta
+  name="description"
+  content="ToeTuff Gang is a student-built project created by Shaik Anas for learning and educational purposes only. This application is not an official or commercial product."
+/>
+
+<h1>ToeTuff Gang</h1>
+<p>Welcome to ToeTuff Gang (GNG), an online browser gaming platform.</p>
 
     <meta name="robots" content="index, follow" />
     <meta name="google-site-verification" content="N7TUZwivBtIclU_IrhALGnub9L2trj7CkBNorN0nCCw" />
