--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- FEATURED BANNER -->
      <section class="featured">
     <div class="featured-item active">
-        <img src="https://images.unsplash.com/photo-1573496358961-3c59e9789a1f?auto=format&fit=crop&w=1600&q=80" alt="Racer Master Legacy - Futuristic robotic neon speed">
+        <img src="file:///C:/BOXUELGaming/assets/car.png" alt="Racer Master Legacy - Futuristic robotic neon speed" width="1000">
         <div class="banner-overlay">
             <h2>Racer Master Legacy</h2>
             <p>High-speed racing in a neon cyber world</p>
@@ -57,7 +57,7 @@
     </div>
     
     <div class="featured-item">
-        <img src="https://images.unsplash.com/photo-1625314886332-fba38d2d2c15?auto=format&fit=crop&w=1600&q=80" alt="Hextris - Robotic neon geometric puzzle">
+        <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420" alt="Hextris - Robotic neon geometric puzzle">
         <div class="banner-overlay">
             <h2>Hextris</h2>
             <p>Fast-paced geometric puzzle challenge</p>
