--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- FEATURED BANNER -->
      <section class="featured">
     <div class="featured-item active">
-        <img src="file:///C:/BOXUELGaming/assets/car.png" alt="Racer Master Legacy - Futuristic robotic neon speed">
+        <img src="assets/car.png" alt="Racer Master Legacy - Futuristic robotic neon speed">
         <div class="banner-overlay">
             <h2>Racer Master Legacy</h2>
             <p>High-speed racing in a neon cyber world</p>
