--- a/index.html
+++ b/index.html
@@ -221,5 +221,21 @@
         }
         draw();
     </script>
+    <footer class="footer">
+  <div class="footer-content">
+    <h3>ToeTuff Gang</h3>
+    <p>
+      This project is created for learning and educational purposes only.
+    </p>
+
+    <p class="creator">
+      Created by <strong>SHAIK ANAS BASHA</strong>
+    </p>
+
+    <p class="copyright">
+      © 2025 ToeTuff Gang. All rights reserved.
+    </p>
+  </div>
+</footer>
 </body>
 </html>
