--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             
             <div class="logo">
                 <!-- Clean futuristic neon logo -->
-                <img src="https://png.pngtree.com/thumb_back/fh260/background/20240521/pngtree-futuristic-border-blue-neon-image_15804970.jpg" alt="toetuffgng Logo">
+                <img src="favicon.png" alt="toetuffgng Logo">
                 <h1>toetuffgng</h1>
             </div>
             <div class="search-bar">
