--- a/index.html
+++ b/index.html
@@ -103,11 +103,14 @@
                 <h3>Clumsy Bird</h3>
                 <p>Dodge, flap, survive the chaos.</p>
             </div>
-
             <!-- 2048 -->
             <div class="game-card">
                 <h3>2048</h3>
                 <p>Classic puzzle with a neon twist.</p>
+            </div>
+            <div class="game-card">
+                <h3>Flappy Neo</h3>
+                <p>Dodge, flap, survive the chaos with a neon twist.</p>
             </div>
 
         </div>
